<resources>
    <string name="app_name">Census</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="not_sign_up">No account yet?</string>
    <string name="sign_up">Sign up</string>
    <string name="register">Register now</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="family_information">Family Information</string>

    <string-array name="array_year">
        <item>1980</item>
        <item>1981</item>
        <item>1982</item>
        <item>1983</item>
        <item>1984</item>
    </string-array>



</resources>
