<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="census.com.census.activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#394152"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="1">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="184dp"
            android:layout_height="156dp"
            android:src="@drawable/census"
            android:layout_weight="0.08"
            android:adjustViewBounds="true"/>

        <!--<EditText
            android:id="@+id/userEmail"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="10dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            android:textColorHint="@color/colorHint"
            android:background="@color/colorLoginEditText"
            android:textColor="@color/colorEditText"
            android:padding="10dp"/>-->

        <EditText
            android:id="@+id/userEmail"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="10dp"
            android:drawableLeft="@mipmap/ic_email_white_24dp"
            android:drawablePadding="10dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textAlignment="textStart"
            android:textColor="#fff"
            android:textColorHint="@color/colorHint" />

        <!--<EditText
            android:id="@+id/userPassword"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColorHint="@color/colorHint"
            android:background="@color/colorLoginEditText"
            android:textColor="@color/colorEditText"
            android:padding="10dp"/>-->

        <EditText
            android:id="@+id/userPassword"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="15dp"
            android:drawableLeft="@mipmap/ic_lock_white_24dp"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textAlignment="textStart"
            android:textColor="#fff"
            android:textColorHint="@color/colorHint" />

        <Button
            android:id="@+id/buttonSignIn"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_round"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/action_sign_in_short" />

        <TextView
            android:id="@+id/textViewForgot"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="Forgot password"
            android:textAlignment="textEnd"
            android:textColor="@color/colorLoginEditText"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/textViewNotSignUp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/not_sign_up"
            android:textAlignment="center"
            android:textColor="@color/colorLoginEditText"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_round"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/register" />

        <!--<Button
            android:id="@+id/buttonForgot"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_round"
            android:gravity="center"
            android:padding="8dp"
            android:text="Forgot password" />-->


    </LinearLayout>


</LinearLayout>
